Исправление для Получение событий с возможностью фильтрации без нескольких Query params